@@ -24,6 +24,7 @@
 |                                                                           |
 |   Changelog :                                                             |
 |               07/20/2007 - Paf - Initial release                          |
+|               08/13/2007 - Paf - Update comments, implement method save() |
 |                                                                           |
 \*-------------------------------------------------------------------------*/
 
@@ -52,39 +53,81 @@ namespace Viracocha {
 
 	namespace Core {
 
+		/**
+		 *	This is a ressource template.</br>
+		 *	This hold the ressource itself and some information
+		 */
 		template <class U> class Ressource
 		{
 			private:
+
+				/**
+				 * Name of the instance
+				 */
 				string m_instance;
+
+				/**
+				 * The ressource held
+				 */
 				shared_ptr<U> m_obj;
+
+				/**
+				 * Last time this ressource has been accessed
+				 */
 				time_t m_lastTime;
 
 			public:
 
+				/**
+				 * This is a constructor
+				 * @param _instance Instance name
+				 * @param _obj The object to be held
+				 */
 				Ressource(string _instance = "default", shared_ptr<U> _obj = shared_ptr<U>()) :
 					m_instance (_instance),
 					m_obj (_obj),
 					m_lastTime (time(NULL)) 
 				{
 				}
-
+			
+				/**
+				 * This is a destructor
+				 */
 				~Ressource() {};
 
+
+				/**
+				 * < operator
+				 * @param b Other Ressource to compare to
+				 */
 				bool operator< (const Ressource<U> &b) const
 				{
 					return m_lastTime < b.m_lastTime;
 				}
 
+				/**
+				 *	Update information regarding the ressource held
+				 */
 				void update() 
 				{
+
+					// Update when it has been accessed 
 					m_lastTime = time(NULL);
 				}
 
+				/**
+				 *	Get the ressource held
+				 *	@return Smart pointer to the ressource held
+				 */
 				shared_ptr<U> getObject()
 				{
 					return m_obj;
 				}
 
+				/**
+				 * Get The instance name og the ressource held
+				 * @return The instance name
+				 */
 				string getInstance()
 				{
 					return m_instance;
@@ -93,34 +136,74 @@ namespace Viracocha {
 		};
 
 
-
+		/**
+		 * This a base manager that can manage any kind of objects.
+		 */
 		template <class T> class BaseManager
 		{
 
 			private:
-			typedef typename vector<Ressource<T> >::iterator RessourceVectorIterator;
-			typedef typename map<string, Ressource<T> >::iterator CacheIterator;
+				typedef typename vector<Ressource<T> >::iterator RessourceVectorIterator;
+				typedef typename map<string, Ressource<T> >::iterator CacheIterator;
 
+				/**
+				* Set of loading sources 
+				*/
+				set< shared_ptr<ISource> >	m_loadSources;
 
-			set< shared_ptr<ISource> >	m_loadSources;
-			set< shared_ptr<ISource> >	m_saveSources;
-			map<string, Ressource<T> > m_cache;
+				/**
+				* Set of saving sources 
+				*/
+				set< shared_ptr<ISource> >	m_saveSources;
 
-			vector< Ressource<T> > m_LRUTable;
-			map<string, RessourceVectorIterator> m_LRUIndex;
+				/**
+				* This is the cache that associates a Ressource to its instance name
+				*/
+				map<string, Ressource<T> > m_cache;
 
-			unsigned int m_maxCache;
+				/**
+				* This is a sorted vector used as a Last Recently Used Table
+				*/
+				vector< Ressource<T> > m_LRUTable;
 
+				/**
+				* This is a map associating an instance name to the ressource iterator from m_LRUTable
+				*/
+				map<string, RessourceVectorIterator> m_LRUIndex;
+
+				/**
+				* Maximum number of elements the cache can hold
+				*/
+				unsigned int m_maxCache;
 
 
 		
 			protected:
 
+				/**
+				 * This is a virtual pure method that is going to be implemented by classes that inherits from this class.
+				 * This method is in charge of creating an actual ressource from a stream
+				 *
+				 * @param _stream Stream from which the ressource will be extracted
+				 * @return Smart pointer to the newly created object
+				 */
 				virtual shared_ptr<T> loadImpl( shared_ptr<IStream> _stream) = 0;
 
+				/**
+				 * This is a virtual pure method that is going to be implemented by classes that inherits from this class.
+				 * This method is in charge of saving an actual ressource to a stream
+				 *
+				 * @param _stream Stream to which the ressource will be saved
+				 * @param _obj Smart pointer to the object to be saved
+				 * @return The successfulness of this operation
+				 */
 				virtual bool saveImpl( shared_ptr<IStream> _stream, shared_ptr<T> _obj) = 0;
 
-
+				/**
+				 * This method trys to find a suitable source to load an instance
+				 * @param _instance Instance name
+				 * @return A smart pointer to a source able to load the instance passed as a parameter
+				 */
 				shared_ptr<ISource> findLoadSource( string _instance)
 				{
 
@@ -140,6 +223,11 @@ namespace Viracocha {
 					return shared_ptr<ISource>();
 				}
 
+				/**
+				 * This method trys to find a suitable source to save an instance
+				 * @param _instance Instance name
+				 * @return A smart pointer to a source able to save the instance passed as a parameter
+				 */
 				shared_ptr<ISource> findSaveSource( string _instance)
 				{
 	
@@ -178,18 +266,29 @@ namespace Viracocha {
 				{
 				};
    
-
+				/**
+				 * Add a Source to the pool of available loading sources
+				 * @param _source Source to add
+				 */ 
 				void addLoadSource(shared_ptr<ISource> _source)
 				{
 					m_loadSources.insert(_source);
 				}
 
+				/**
+				 * Add a Source to the pool of available saving sources
+				 * @param _source Source to add
+				 */ 
 				void addSaveSource(shared_ptr<ISource> _source)
 				{
 					m_saveSources.insert(_source);
 				}
 
-
+				/**
+				 * This method loads an object from its instance name
+				 * @param _instance Instance name
+				 * @return Smart pointer to the object
+				 */
 				shared_ptr<T> load(string _instance)
 				{
 					// First we check if this instance exists in the cache
@@ -215,7 +314,7 @@ namespace Viracocha {
 						// First we need a stream
 						shared_ptr<IStream> stream = source->load(_instance);
 
-						// Then we load we object from the stream
+						// Then we load the object from the stream
 						// This method has to be implemented by any class that inherits from BaseManager
 						// (that's why there is 'Base' in the name)
 						shared_ptr<T> object = this->loadImpl(stream);
@@ -267,23 +366,74 @@ namespace Viracocha {
 
 				}
 
-			bool save(string _instance);
+				/**
+				 * This method saves an object from its instance name
+				 * @param _instance Instance name
+				 * @return The successfulness of this operation
+				 */
+				bool save(string _instance)
+				{
+					// First we check if this instance exists in the cache
+					CacheIterator iter = m_cache.find(_instance);
+
+					// There is no such instance in the cache
+					if (iter == m_cache.end())
+					{
+
+						return false;
+
+					} else { 
+						// An instance has been found in the cache
+		
+						// 1./ We get the Ressource associated to this instance
+						Ressource<T> res = iter->second;
+
+						// 2./ We update its stats (last time it has been used...).
+						// So the cache can guess what objects are the more/less used
+						res.update();
+
+						// 3./ We need to find a suitable source to load the instance
+						shared_ptr<ISource> source = findSaveSource(_instance);
+
+						// If no source is able to retrieve this instance
+						// NULL is returned
+						if (source.get() == NULL)
+						{
+							return false;
+						}
+
+						// We need a stream to save this object
+						shared_ptr<IStream> stream = source->load(_instance);
+
+						// Then we save the object to the stream
+						// This method has to be implemented by any class that inherits from BaseManager
+						// (that's why there is 'Base' in the name)
+						this->saveImpl(stream, res->getObject());
+			
+						stream->close();
 
 
+						// 3./ Everything is a success.
+						return true;
 
-			void release (string _instance)
-			{
-				RessourceVectorIterator it = m_LRUIndex[_instance];
-
-				m_LRUIndex.erase(_instance);
-				m_LRUTable.erase(it);
-				m_cache.erase(_instance);
-			}
+					}
 
 
+				}
 
+				/**
+				* Erase an object from the cache
+				* @param _instance Object to erase from the cache
+				*/
+				void release (string _instance)
+				{
+					RessourceVectorIterator it = m_LRUIndex[_instance];
+
+					m_LRUIndex.erase(_instance);
+					m_LRUTable.erase(it);
+					m_cache.erase(_instance);
+				}
 		};
-
 	}
 }
 
